[gd_scene load_steps=3 format=3 uid="uid://ghost_tower_scene_uid"]

[ext_resource type="Script" path="res://scripts/Towers/GhostTower.gd" id="1_script"]
[ext_resource type="Script" path="res://scripts/UI/RangeIndicator.gd" id="2_range"]

[node name="GhostTower" type="Node2D"]
script = ExtResource("1_script")

[node name="BaseSprite" type="Sprite2D" parent="."]

[node name="TurretSprite" type="Sprite2D" parent="."]

[node name="RangeIndicator" type="Node2D" parent="."]
script = ExtResource("2_range")
